# oracles

./: .gitignore  Dockerfile  README.md  data.py.sample  data_sample.py  docker-compose.yml  oracles.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  server.py  setup.cfg  test_server.py
.circleci/: config.yml
app/: Dockerfile  data_sample.py  oracles.py  requirements.in  requirements.txt  server.py  setup.py
app/templates/: oracle.html
docker/: oracles.ini
nginx/: default.conf
oracles/: Dockerfile  main.py  requirements.txt  server.py
oracles/static/: oracle.js
oracles/templates/: error.html  oracle.html
static/: oracle.js
templates/: error.html  index.html  octocat.html  oracle.html
tests/: conftest.py  test_browser.py  test_cli.py  test_oracles.py  test_server.py
